--- a/resources/index.html
+++ b/resources/index.html
@@ -5,7 +5,7 @@
     body {
       font-family: "Trebuchet MS", sans-serif;
       font-size: 1.5rem;
-      margin: 0 auto;
+      margin: 3rem auto 5.5rem;
       max-width: 70%;
       line-height: 1.5;
     }
@@ -19,6 +19,10 @@
     .button {
       height: 3rem;
       font-size: 1.5rem;
+    }
+
+    form {
+      margin: 0 0 3rem;
     }
 
     .entry {
