--- a/resources/index.html
+++ b/resources/index.html
@@ -10,7 +10,7 @@
       line-height: 1.5;
     }
 
-    .url-box {
+    .url-box, .search-box {
       width: 35rem;
       height: 3rem;
       font-size: 1.5rem;
@@ -22,7 +22,7 @@
     }
 
     form {
-      margin: 0 0 3rem;
+      margin: 0 0 1rem;
     }
 
     .entry {
@@ -43,15 +43,25 @@
       color: rgb(102, 186, 42);
       float: right;
     }
+
+    .logo {
+      color: black;
+      text-decoration: none;
+    }
   </style>
 </head>
 
 <body>
-  <h1>Keepsake</h1>
+  <h1><a class="logo" href="/">Keepsake</a></h1>
 
   <form method="POST" action="/add">
     <input class="url-box" type="text" name="url" placeholder="http://example.com" required>
     <input class="button" type="submit" value="Add">
+  </form>
+
+  <form method="GET" action="/search">
+    <input class="search-box" type="text" name="query" placeholder="search words" required>
+    <input class="button" type="submit" value="Search">
   </form>
 
   <a href="/export" class="export">Export</a>
